--- a/lengFormyComp.tex
+++ b/lengFormyComp.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
+\usepackage{amsmath}
 
 \title{Lenguajes Formales y Computabilidad\linebreak Definiciones, lemas y teoremas}
 \author{Valentino Beorda}
@@ -114,7 +114,174 @@ Para que una expresión $E$ pueda ser utilizada en la notación lambda, deberá 
     \item $\lambda_{x_1, ..., x_n, \alpha_1, ..., \alpha_m}[E](k_1, ..., k_n, \beta_1, ..., \beta_m)$ = valor que asume o representa $E$ cuando le asignamos a cada $x_i$ el valor $k_i$ y a cada $\alpha_i$ el valor $\beta_i$.
 \end{enumerate}
 
-Notar que para $S \subseteq \omega^n \times \Sigma^{*m}$ se tiene que $\chi_S^{\omega^n \times \Sigma^{*m}} = \lambda_{x_1, ..., x_n, \alpha_1, ..., \alpha_m}[(\overrightarrow{x}, \overrightarrow{\alpha}) \in S]$.
+Notar que para $S \subseteq \omega^n \times \Sigma^{*m}$ se tiene que $\chi_S^{\omega^n \times \Sigma^{*m}} = \lambda_{x_1, ..., x_n, \alpha_1, ..., \alpha_m}[(\overrightarrow{x}, \overrightarrow{\alpha}) \in S]$.\pagebreak
+
+\section{Codificaciones}
+
+Usaremos $\omega^N$ para denotar el conjunto de todas las infinituplas con coordenadas en $\omega$. Es decir: $\omega^N$ = $\{(s_1, s_2,...): s_i \in \omega$ $\forall i \geq 1\}$. Definamos el siguiente subconjunto de $\omega^N$:
+\begin{center}
+    $\omega^{[N]} = \{(s_1, s_2, ...) \in \omega^N : $ hay un $n \in N$ tal que $s_i = 0$, $\forall i \geq n\}$
+\end{center}
+
+Notar que $\omega^{[N]} \neq \omega^N$. Además, notar que $(s_1, s_2, ...) \in \omega^{[N]}$ sii una cantidad finita de coordenadas $(s_1, s_2, ...)$ son no nulas ($\{i : s_i \neq 0 \}$ es finito).
+
+Definamos:\linebreak
+\hspace*{15ex}$pr: N \rightarrow \omega$\linebreak
+\hspace*{20ex}$n \mapsto n$-esimo número primo\linebreak
+
+\textbf{Teorema:} Para cada $x \in N$, hay una única infinitupla $(s_1, s_2, ...) \in \omega^{[N]}$ tal que:
+\begin{center}
+    $\prod_{i=1}^{\infty} pr(i)^{s_i}$
+\end{center}
+Notar que en esta productoria solo una cantidad finita de factores son distintos de 1.\linebreak
+
+\textbf{Lemma:} Si $p, p_1, ..., p_n$ son números primos (con $n \geq 1$) y $p$ divide a $p_1, ..., p_n$, entonces $p = p_i$, para algún $i$.\linebreak
+
+Dada una infinitupla $(s_1, s_2, ...) \in \omega^{[N]}$ usaremos $\left\langle s_1, s_2, ...\right\rangle$ para denotar al número $\prod_{i=1}^{\infty} pr(i)^{s_i}$. \linebreak
+
+Dado $x \in N$, usaremos $(x)$ para denotar a la única infinitupla $(s_1, s_2, ...) \in \omega^{[N]}$ tal que $x = \left\langle s_1, s_2, ...\right\rangle = \prod_{i=1}^{\infty} pr(i)^{s_i}$. Además, para $i \in N$, usaremos $(x)_i$ para denotar a $s_i$ de dicha infinitupla. Es decir que:
+\begin{enumerate}
+    \item $(x) = ((x)_1, (x)_2, ...)$
+    \item $(x)_i$ es el exponente de $pr(i)$ en la factorización de $x$ como producto de primos.
+    \item $\left\langle (x)_1, (x)_2, ...\right\rangle = x, \forall x \in N$.
+    \item $\forall (s_1, s_2, ...) \in \omega^{[N]}$, se tiene que $(\left\langle s_1, s_2, ... \right\rangle)_i = s_i, \forall i \in N$. Es decir que $(\left\langle s_1, s_2, ... \right\rangle) = (s_1, s_2, ...)$. 
+\end{enumerate}
+
+\textbf{Teorema:} Las funciones:\linebreak
+\hspace*{10ex}$N \rightarrow \omega^{[N]}$ \hspace*{30ex} $\omega^{[N]} \rightarrow N$\linebreak
+\hspace*{10ex} $x \mapsto (x) = ((x)_1, (x)_2, ...)$ \hspace*{8ex} $(s_1, s_2, ...) \mapsto \left\langle s_1, s_2, ... \right\rangle$\linebreak
+son biyecciones una inversa de la otra.\linebreak
+
+\textbf{Lemma:} Dados $x, i \in N$ se tiene que
+\begin{center}
+    $(x)_i = max_t(pr(i)^t)$ divide a $x$
+\end{center}
+
+Definamos la función $Lt: N \rightarrow \omega$ de la siguiente manera:
+\hspace*{20ex}$Lt(x) = max_i(x)_i \neq 0$ si $x \neq 1$\linebreak
+\hspace*{20ex}$Lt(x) = 0$ si $x = 1$\linebreak
+
+\textbf{Lemma:} $\forall x \in N$, $x = \prod_{i=1}^{Lt(x)} pr(i)^{(x)_i}$\linebreak
+
+\begin{Large}\textbf{Órdenes totales}\end{Large}\linebreak
+
+\textbf{Definición:} Una relación binaria $R$ sobre un conjunto $A$ es llamada un orden $parcial$ sobre A si cumple las siguientes 3 propiedades:
+\begin{enumerate}
+    \item Reflexividad: $xRx, \forall x \in A$
+    \item Transitividad: $xRy$ y $yRz$ implica $xRz, \forall x, y, z \in A$
+    \item Antisimetría: $xRy$ y $yRx$ implica $x = y, \forall x, y \in A$
+\end{enumerate}
+
+\textbf{Definición:} Por un orden total sobre A entenderemos un orden parcial $\leq$ sobre A el cual cumple:
+\begin{itemize}
+    \item $a \leq b$ o $b \leq a$, $\forall a, b \in A$ (tricotomía)\linebreak
+\end{itemize}
+
+\begin{Large}\textbf{Ordenes Naturales sobre $\Sigma^*$}\end{Large}\linebreak
+
+El alfabeto que usaremos tendrá todos los numerales menos el 0 y además tendrá un símbolo para denotar al número diez, el símbolo d. Es decir:
+\begin{center}
+    $\widetilde{Num} = \{1, 2, 3, 4, 5, 6, 7, 8, 9, d\}$
+\end{center}
+Representaremos a los números de $\omega$ con la siguiente lista infinita de palabras de $\widetilde{Num}$:\linebreak
+$\varepsilon$, 1, 2, 3, 4, 5, 6, 7, 8, 8, d,\linebreak
+11, 12, ..., 1d, 21, 22, ..., 2d, ..., 91, 92, ..., 9d, d1, d2, ..., dd,\linebreak
+111, 112, ..., 11d, 121, 122, ..., 12d, ...\linebreak
+
+La regla para conseguir el siguiente a una palabra $\alpha$ es la siguiente:
+\begin{enumerate}
+    \item si $\alpha = d^n$, con $n \geq 0$ entonces el siguiente de $\alpha$ es $1^{n+1}$
+    \item si $\alpha$ no es de la forma $d^n$ entonces el siguiente de $\alpha$ se obtiene de la siguiente manera:
+    \begin{enumerate}
+        \item buscar de derecha a izquierda el primer símbolo no igual a $d$
+        \item reemplazar dicho símbolo por su siguiente en la lista 1, 2, 3, 4, 5, 6, 7, 8, 9, $d$
+        \item reemplazar por el símbolo 1 a todos los símbolos iguales a $d$ que ocurrían a la derecha del símbolo reemplazado
+    \end{enumerate}
+\end{enumerate}
+
+Propiedades de la regla de asignación anterior:
+\begin{itemize}
+    \item (S) Toda palabra de $\widetilde{Num}^*$ aparece en la lista
+    \item (I) Ninguna palabra de $\widetilde{Num}^*$ aparece más de una vez
+\end{itemize}
+
+Notar que la propiedad (S) nos dice que la función:
+\hspace*{30ex} $*: \omega \rightarrow \widetilde{Num}^*$\linebreak
+\hspace*{34ex}$n \mapsto (n+1)$-esimo elemento de la lista\linebreak
+es sobreyectiva y la propiedad (I) nos garantiza que dicha funticón es inyectiva, por lo cual entre las dos garantizan que esta representación establece una biyección entre $\widetilde{Num}^*$ y $\omega$.\linebreak
+
+Llamaremos $\#$ a la inversa de $*$, por lo que $\#(\alpha)$ es la posición que ocupa $\alpha$ en la lista de palabras de $\widetilde{Num}^*$ contando desde el 0, es decir, $\alpha$ es la $(\#(\alpha)+1)$-esima palabra de la lista.\linebreak
+
+Tal como en el caso de la notación decimal, el número $\#(\alpha)$ se expresa como una suma de potencias de 10 (pues $|\widetilde{Num}| = 10$), con los coeficientes dados en función de los símbolos de $\alpha$. Más concretamente si $\alpha = s_1s_2...s_k$ con $k \geq 1$ y $s_1s_2...s_k \in \widetilde{Num}^*$, entonces:
+\begin{center}
+    $\#(\alpha) = \#(s_1).10^{k-1} + \#(s_2).10^{k-2} + ... + \#(s_k).10^0$ 
+\end{center}
+
+Dado que el siguiente a un elemento  $\alpha$ de la lista es de la misma longitud que $\alpha$ o tiene longitud igual a $|\alpha| + 1$, podemos representar a la lista anterior de la siguinte manera:
+\begin{center}
+    $B_0;B_1;B_2;...$
+\end{center}
+Donde cada $B_n$ es la parte de la lista en la cual las palabras tienen longitud exáctamente $n$. \linebreak
+
+Propiedades básicas:
+\begin{enumerate}
+    \item Si $B_n = \alpha_1, ..., \alpha_k$ entonces $\alpha_1 = 1^n$ y $\alpha_k = d^n$ 
+    \item Si $d^n$ ocurre en $B_n$ lo hace en la última posición
+    \item Si $B_n = \alpha_1, ..., \alpha_k$, entonces $B_{n+1} = 1\alpha_1, ..., 1\alpha_k, 2\alpha_1, ..., 2\alpha_k, ..., d\alpha_1, ..., d\alpha_k$
+    \item $B_n$ es una lista sin repeticiones de todas las palabras de longitud $n$
+\end{enumerate}
+
+\textbf{Lemma:} Sea $\sigma \in \widetilde{Num}$ y supongamos $\alpha \in \widetilde{Num}^*$ no es de la forma $d^n$. Entonces el sguiente a $\sigma\alpha$ es $\sigma\beta$ donde $\beta$ es el siguiente a $\alpha$.\pagebreak
+
+\begin{Large}\textbf{Caso general}\end{Large}\linebreak
+
+Sea $\Sigma$ un alfabeto no vacio y supongamos $\leq$ es un orden total sobre $\Sigma$. Supongamos que $\Sigma = \{a_1, ..., a_n\}$, con $a_1 < a_2 < ... < a_n$. Podemos dar la siguiente lista de palabras de $\Sigma^*$:\linebreak
+$\varepsilon, a_1, a_2, ..., a_n$\linebreak
+$a_1a_1, a_1a_2, ..., a_1a_n, a_2a_1, a_2a_2, ..., a_2a_n, ..., a_na_1,a_na_2, ..., a_na_n$\linebreak
+$a_1a_1a_1, a_1a_1a_2, ..., a_1a_1a_n, a_1a_2a_1, a_1a_2a_2, ..., a_1a_2a_n, ..., a_1a_na_1, a_1a_na_2, ..., a_1a_na_n$\linebreak
+
+Definamos $s^{\leq} : \Sigma^* \rightarrow \Sigma^*$ de la siguiente forma:\linebreak
+\hspace*{7ex}- $s^{\leq}((a_n)^m) = (a_1)^{m+1}$\linebreak
+\hspace*{7ex}- $s^{\leq}(\alpha a_i(a_n)^m) = \alpha a_{i+1}a_1^{m}$ cada vez que $\alpha \in \Sigma^*, 1 \leq i < n$ y $m \geq 0$. \linebreak
+
+Propiedades:
+\begin{itemize}
+    \item $\varepsilon \neq s^{\leq}(\alpha), \forall \alpha \in \Sigma^*$
+    \item Si $\alpha \neq \varepsilon$, entonces $\alpha = s^{\leq}(\beta)$ para algún $\beta \in \Sigma^*$
+    \item $s^{\leq}(\alpha a_i) = \alpha a_{i+1}, i < n$
+    \item $s^{\leq}(\alpha a_n) = s^{\leq}(\alpha)a_1$
+\end{itemize}
+
+Definamos $*^{\leq} : \omega \rightarrow \Sigma^*$ de la siguiente manera:\linebreak
+\hspace*{7ex} -$*^{\leq}(0) = \varepsilon$\linebreak
+\hspace*{7ex} -$*^{\leq}(i+1) = s^{\leq}(*^{\leq}(i))$\linebreak
+
+$*^{\leq}(i)$ nos devuelve el $(i+1)$-esimo elemento de la lista, o lo que es lo mismo, el i-esimo elemento de la lista contando desde el 0.\linebreak
+
+\textbf{Lemma:} Sea $\Sigma$ un alfabeto no vacio y supongamos $\leq$ es un orden total sobre $\Sigma$. Supongamos que $\Sigma = \{a_1, ..., a_n\}$, con $a_1 < a_2 < ... < a_n$. Entonces para cada $\alpha \in \Sigma^* - \{\varepsilon\}$ hay únicos $k \in \omega$ y $i_0, i_1, ..., i_k \in \{1, ..., n\}$ tales que:
+\begin{center}
+    $\alpha = a_{i_k}...a_{i_0}$
+\end{center}
+Notar que el $k$ del lemma anterior es $|\alpha| - 1$ y los números $i_k, ..., i_0$ van dando el número de orden de cada símbolo de $\alpha$ yendo de izquieda a derecha.\linebreak
+
+Ahora definimos $\#^{\leq}$ (inversa de $*^{\leq}$) de la siguiente forma:\linebreak
+\hspace*{7ex} - $\#^{\leq}: \Sigma^* \rightarrow \omega$\linebreak
+\hspace*{16ex} $\varepsilon \mapsto 0$\linebreak
+\hspace*{9ex} $a_{i_k}...a_{i_o} \mapsto i_kn^k + ... + i_0n^0$\linebreak
+
+\textbf{Lemma:} Sea $n \geq 1$ fijo. Entonces cada $x \geq 1$ se escribe en forma única de la siguiente manera:
+\begin{center}
+    $x = i_kn^k + i_{k-1}n^{k-1} + ... + i_0n^0$
+\end{center}
+con $k \geq 0 $ y $1 \leq i_k, i_{k-1}, ..., i_0 \leq n$.\pagebreak
+
+\begin{Large}\textbf{Extensión del orden total de $\Sigma$ a $\Sigma^*$}\end{Large}\linebreak
+
+Podemos extender el orden de $\Sigma$ a $\Sigma^*$ de la siguiente manera:\linebreak
+\hspace*{7ex} - $\alpha \leq \beta$ sii $\#^{\leq}(\alpha) \leq \#^{\leq}(\beta)$\linebreak
+Es decir, $\alpha \leq \beta$ sii $\alpha$ ocurre antes que $\beta$ en la lista.\linebreak
+
+\textbf{Lemma:} Si $S \subseteq \Sigma^*$ es no vacio, entonces $\exists \alpha \in S$ tal que $\alpha \leq \beta$ para cada $\beta \in S$.
 
 \end{flushleft}
 \end{document}
